--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 .env
 
 .direnv/*
@@ -18,4 +17,15 @@ public/*
 !public/.keep
 
 .cache/
+
+
+# middleman ignores
+.bundle
+.cache
+.DS_Store
+.sass-cache
+build/
+
+Gemfile.lock
+
 
