add lede to frontmatter and adjust sequence of frontmatter

--- a/source/template.yaml
+++ b/source/template.yaml
@@ -1,8 +1,9 @@
 ---
 
 title: <%= @title %> 
-author: metapsj
 date: <%= @date.strftime('%F %R %Z') %>
+author: metapsj
+lead: the most important information about the article / post
 category:  
 tags:  
 thumb: pubsub.png
