--- a/source/template.yaml
+++ b/source/template.yaml
@@ -1,14 +1,14 @@
 ---
 
 title: <%= @title %> 
+summary: 
 date: <%= @date.strftime('%F %R %Z') %>
 author: metapsj
-lead: the most important information about the article / post
 category:  
 tags:  
 thumb: pubsub.png
-featured: true
-published: true
+featured: false
+published: false
 
 ---
 
